style.css
html, body { 
    background-color: springgreen; 
    font-family: 'Open Sans', sans-serif !important; 
}

h1,h4 { font-weight: 700; margin-bottom: 10px; }
h2, h3 { font-weight: 300; color: #276bff;}
h2 {  font-size: 54px; text-align: center; }
h3 {  font-size: 28px; }

.background-white {
    background-color: white;
}
.background-gray { 
    background: #434242; }

p.lead { text-align: center; color: #727878; }

hr { margin: 40px 0px; border-color: #727878; opacity: 0.7; filter:alpha(opacity=70); }

.icon { display: inline-block; background: url(images/t.png) no-repeat; height: 32px; width: 32px; }


ul.no-bullets { 
    list-style-type: none; 
    margin: 0px; 
    padding: 0px; 
}

.container { 
    max-width: 1280px; 
    padding: 40px 180px; 
}

#profile .row > div { 
        margin-bottom: 20px; 
}
#profile .row > div img { 
        width: 100%; 
        max-width: 246px; 
        height: auto; 
}

.jumbotron {

    background-image: url(images/background.jpg);
    background-size: 100%;
    background-size: cover;
    
    background-repeat: no-repeat;
    background-attachment: fixed;
    height: 100vh  !important;
    z-index: -1;
    margin: 0;
    overflow: hidden;


}
.jumbotron .overlay { 
    background-color: #22A39F; 
    position: absolute; top: 0px; bottom: 0px; left: 0px; right: 0px; opacity: 0.0; 
    filter:alpha(opacity=0); z-index: 2; }

.jumbotron .container { position: relative; top: 28%; z-index: 4; text-align: center; }
.jumbotron .container > * { text-align: center; color: #FFFFFF; }
.jumbotron .container h1 { padding-bottom: 20px; border-bottom: 1px solid #FFFFFF; 
    border-bottom-color: rgba(255,255,255,0.35); display: inline-block; }
.jumbotron .container .lead { font-size: 28px; }
.jumbotron .scroll-down { height: 80px; width: 110px; display: block; 
    position: absolute; bottom: 0px; right: 1%; background-color: #27f8ff; text-align: center; z-index: 6; }
.jumbotron .scroll-down .glyphicon { 
	color: black; 
	font-size: 30px; 
	padding-right: 2px; 
	padding-top: 20px; 
	
	animation-name: wiggle;
	animation-duration: 1.2s;
	animation-timing-function: linear;
	animation-iteration-count: infinite;
	animation-direction: normal;
}
.jumbotron .scroll-down:hover .glyphicon { padding-top: 25px; }

.navbar{
    background-color: #27f8ff; 
    width: 110px;
    border: 0px;
    right: 1%;
    top: 15%;
    position: sticky;
    z-index: 999;
    float: right;
}
.navbar .navbar-collapse { 
    padding: 0px; 
    max-height: none; 
}
.navbar .navbar-nav { 
    float: none;
}
.navbar-nav { 
    margin: 0px;
}
.navbar .nav > li { 
    display: block; 
    float: none; 
    height: 80px; 
}
.navbar .nav > li a { 
    display: block;  
    height: 80px; 
    text-align: center; 
    padding-top: 30px; 
    font-weight: 600; 
    color: #000000; 
}
.navbar .nav > li a:hover, .navbar .nav > li a:focus { 
    color: #999999; 
}
.navbar-default .navbar-nav > .active > a, 
.navbar-default .navbar-nav > .active > a:hover, 
.navbar-default .navbar-nav > .active > a:focus { 
    
    background-color: #276bff;
    color: #ffffff; 
}
.navbar-default .navbar-toggle:hover .icon-bar,
.navbar-default .navbar-toggle:focus .icon-bar { 
    background: #222222; }

#experiences .experience { 
    margin-bottom: 20px; }
#experiences .experience p > strong { 
    display: block; 
    padding-top: 8px; 
    margin-bottom: 10px; }
#experiences .experience .experience-details { 
    display: block; 
    margin-top: 6px; }
#experiences .experience .experience-details * { 
    color: #276bff; }
#experiences .experience .experience-details .separator { 
    color: #BCBCBC; }

#abilities ul > li { 
    min-height: 30px; 
    padding: 3px 0px; }
#abilities ul > li:hover { 
    background: #F2F2F2; }
#abilities ul > li .ability-title { 
    display: inline-block; 
    width: 60%; }
#abilities ul > li .ability-score .glyphicon { 
	color: #DFE0E0; 
	font-size: 14px; 
	 
	-webkit-transition: all 0.3s;
    -moz-transition: all 0.3s;
    -o-transition: all 0.3s;
    transition: all 0.3s;
}
#abilities ul > li .ability-score .glyphicon.filled { 
    color: #276bff; 
	animation-name: shine;
	animation-duration: 3s;
	animation-timing-function: linear;
	animation-iteration-count: infinite;
	animation-direction: normal;
}

#projects .row > div { margin-bottom: 30px;}
#projects figure { position: relative; overflow: hidden; }
#projects figure h3 { color: #FFF; font-weight: 600; margin-bottom: 5px; }
#projects figure p > strong { width: 60px; display: inline-block; margin: 0px; }
#projects figure img { width: 110%; }
#projects figure figcaption {
    padding: 20px 30px;
    position: absolute;
    top: 0px;
    left: 0px;
    height: 100%;
    width: 100%;
}

#projects figure a {
	z-index: 998;
	text-indent: 200%;
	white-space: nowrap;
	font-size: 0;
	opacity: 0;
    position: absolute;
    top: 0px;
    left: 0px;
    height: 100%;
    width: 100%;
}
#projects figure .icon { 
	background: #276bff;
	position: absolute;
	top: 0px;
	right: 0px;
	width: 48px;
	height: 48px;
}
#projects figure .icon span {
	font-size: 18px;
	line-height: 18px;
	padding: 15px;
}

#contact { padding-bottom: 200px; }
#contact h2, #contact .row * { color: #FFFFFF; }
#contact a { display: block; line-height: 32px; margin-bottom: 20px; opacity: 0.7; filter:alpha(opacity=70);  }
#contact a .icon { float: left; margin-right: 20px; }
#contact a:hover { opacity: 1; filter:alpha(opacity=100); text-decoration: none; }


@media (max-width: 767px) { 
	.jumbotron:before {
		bottom: 100px;
		left: 20px;
		right: 20px;
		top: 20px;		
	}
	.jumbotron .container { top: 20%; padding-top: 0px; }
	.jumbotron .scroll-down { width: 100%; right: 0px; }
	
	.navbar  { left: 0px; top: 0px; width: 100%; }
	.navbar .nav > li { height: 60px; }
	.navbar .nav > li a { height: 60px; text-align: center; padding-top: 20px; font-weight: 600; color: #000000; }
	
	.container { padding: 60px 20px; min-width: 280px; }
	.hidden-phone { display: block; }
	
	#profile .row * { text-align: center; }
	
	#experiences .experience .experience-details > span { display: block; margin-bottom: 6px; }
	#experiences .experience .experience-details .separator { display: none; }
		
	#contact { padding-bottom: 60px; }
	#contact a .icon { float: left; margin-right: 10px; }
}    

/* Effects for project figures */

figure.effect {
	background: #276bff;
	color: #FFF;
}

figure.effect img {
	width: -webkit-calc(100% + 20px);
	width: calc(100% + 20px);
	-webkit-transition: opacity 0.35s, -webkit-transform 0.35s;
	transition: opacity 0.35s, transform 0.35s;
	-webkit-transform: translate3d(0,0,0);
	transform: translate3d(0,0,0);
	-webkit-backface-visibility: hidden;
	backface-visibility: hidden;
}

figure.effect:hover img {
	opacity: 0.2;
	-webkit-transform: translate3d(-10px,0,0);
	transform: translate3d(-10px,0,0);
}

figure.effect figcaption {
	text-align: left;
}

figure.effect h3 {
	position: relative;
	overflow: hidden;
	padding-bottom: 20px;
	opacity: 0;
	-webkit-transition: opacity 0.35s, -webkit-transform 0.35s;
	transition: opacity 0.35s, transform 0.35s;
}

figure.effect:hover h3 {
	opacity: 1;
}

figure.effect h3::after {
	position: absolute;
	bottom: 0;
	left: 0;
	width: 100%;
	height: 2px;
	background: #fff;
	content: '';
	-webkit-transition: -webkit-transform 0.35s;
	transition: transform 0.35s;
	-webkit-transform: translate3d(-100%,0,0);
	transform: translate3d(-100%,0,0);
}

figure.effect:hover h3::after {
	-webkit-transform: translate3d(0,0,0);
	transform: translate3d(0,0,0);
}

figure.effect p {
	padding-top: 10px;
	opacity: 0;
	-webkit-transition: opacity 0.35s, -webkit-transform 0.35s;
	transition: opacity 0.35s, transform 0.35s;
	-webkit-transform: translate3d(0,100%,0);
	transform: translate3d(0,100%,0);
}

figure.effect:hover p {
	opacity: 1;
	-webkit-transform: translate3d(0,-15%,0);
    transform: translate3d(0,-15%,0);
}

/* Animations for the little arrow in the beginning and skill stars */

@keyframes wiggle {
	0% {
        padding-top: 20px;
        padding-right: 2px;
	}

    25% {
        padding-top: 25px;
        padding-right: 12px;
    }

	50% {
        padding-top: 30px;
        padding-right: 2px;
	}

    75% {
        padding-top: 25x;
        padding-left: 12px;
    }

	100% {
        padding-top: 20px;
        padding-left: 0px;
	}
}

@keyframes shine {

    40% {
        color: #276bff;
    }

    50% {
        color: gold

    }
    60% {
        color: #276bff;
    }
}

